# omics

./: .editorconfig  .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.MD  README.md  YEAH.txt  docker-compose.yml  heroku.yml
catalogue/: Cargo.toml  container.rs  lib.rs
catalogue/application/: dtos.rs  mod.rs
catalogue/application/catalogue/: get.rs  mod.rs
catalogue/application/handler/: collection.rs  mod.rs  publication.rs
catalogue/domain/: catalogue.rs  mod.rs
catalogue/domain/catalogue/: author.rs  category.rs  collection.rs  collection_service.rs  publication.rs  publication_service.rs  repository.rs  statistics.rs
catalogue/infrastructure/service/: collection_service.rs  mod.rs  publication_service.rs
catalogue/mocks/: container.rs
common/: Cargo.toml  cache.rs  config.rs  container.rs  counter.rs  error.rs  event.rs  lib.rs  model.rs  prelude.rs  request.rs  sql.rs  transaction.rs
common/cache/: cache.rs  inmem.rs  mod.rs
common/config/: business_rules.rs  service.rs
common/domain/: mod.rs  payment.rs  user.rs
common/error/: common.rs  error.rs  mod.rs  public.rs
common/event/: event.rs  handler.rs  inmem.rs  mod.rs  publisher.rs  repository.rs  subscriber.rs
common/infrastructure/: mod.rs
common/infrastructure/cache/: inmem.rs  mod.rs  postgres.rs
common/infrastructure/event/: inmem_event_bus.rs  inmem_repository.rs  mod.rs  postgres_event_repository.rs
common/mocks/: calls_tracker.rs  counter.rs  event_publisher.rs  mod.rs
common/model/: aggregate_root.rs  events.rs  id.rs  mod.rs  model.rs  pagination.rs  status_history.rs  time_ordered_data.rs
common/request/: command.rs  include.rs  pagination.rs
common/sql/: where_builder.rs
file/: Cargo.toml  file.rs  lib.rs  uploader.rs
file/uploader/: s3_uploader.rs
identity/: Cargo.toml  container.rs  lib.rs
identity/application/: dtos.rs  mod.rs  util.rs
identity/application/role/: create.rs  delete.rs  get_all.rs  get_by_id.rs  get_permissions.rs  get_users.rs  make_default.rs  mod.rs  update.rs
identity/application/user/: authorization.rs  change_password.rs  change_payment_email.rs  change_role.rs  commands.rs  delete.rs  get_all.rs  get_by_id.rs  login.rs  mod.rs  query_service.rs  recover_password.rs  register.rs  search.rs  set_flag.rs  update.rs  user_service.rs  validate.rs
identity/domain/: mod.rs  role.rs  token.rs  user.rs
identity/domain/role/: mod.rs  name.rs  permission.rs  permission_repository.rs  repository.rs  role.rs  role_repository.rs
identity/domain/token/: encoder.rs  mod.rs  repository.rs  service.rs  token.rs  token_encoder.rs  token_repository.rs  token_service.rs
identity/domain/user/: auth_service.rs  authentication_service.rs  authorization_service.rs  biography.rs  birthdate.rs  email.rs  events.rs  fullname.rs  gender.rs  identity.rs  image.rs  mod.rs  password.rs  password_hasher.rs  person.rs  provider.rs  repository.rs  service.rs  user.rs  user_repository.rs  user_service.rs  username.rs  validation.rs  value_objects.rs
identity/domain/validation/: mod.rs  validation.rs  validation_repository.rs
identity/infrastructure/: mod.rs
identity/infrastructure/mocks/: domain.rs  mod.rs  password_hasher.rs  token_encoder.rs
identity/infrastructure/persistence/: mod.rs
identity/infrastructure/service/: bcrypt_hasher.rs  jwt_encoder.rs  mod.rs
identity/mocks/: container.rs  domain.rs  mod.rs  password_hasher.rs  populate.rs
identity/tests/: user_service.rs
main/: Cargo.toml  authorization.rs  config.rs  container.rs  error.rs  events.rs  main.rs  port.rs  response.rs
main/application/: dtos.rs  mod.rs
main/application/backup/: generate.rs  list.rs  mod.rs
main/application/configuration/: get.rs  mod.rs  update.rs
main/development/: event_logger.rs  handler.rs  mod.rs  populate.rs  run.rs
main/handlers/: author.rs  authorization.rs  backup.rs  catalog.rs  catalogue.rs  category.rs  collection.rs  common.rs  configuration.rs  container.rs  context.rs  contract.rs  donation.rs  event.rs  file.rs  mod.rs  notification.rs  payment.rs  plan.rs  publication.rs  reader.rs  report.rs  role.rs  subscription.rs  user.rs
main/infrastructure/: event.rs  mod.rs
main/infrastructure/publishing/: admin_translator.rs  author_translator.rs  content_manager_translator.rs  mod.rs  reader_translator.rs  user_service.rs
main/infrastructure/shared/: user_service.rs
main/infrastructure/translator/: author_translator.rs  mod.rs
notification/: Cargo.toml  container.rs  lib.rs
notification/application/: dtos.rs  mod.rs
notification/application/author/: approved_rejected_publication_handler.rs  mod.rs
notification/application/notification/: get_all.rs  mark_all_as_read.rs  mod.rs  notification_handler.rs
notification/application/user/: mod.rs  registered_handler.rs
notification/domain/: email.rs  mod.rs  notification.rs
notification/domain/email/: service.rs
notification/domain/notification/: body.rs  repository.rs
notification/infrastructure/service/: email_service.rs  gmail_service.rs  mod.rs
payment/: Cargo.toml  container.rs  lib.rs
payment/application/: dtos.rs  mod.rs
payment/application/contract/: approve.rs  can_request.rs  cancel.rs  charge_for_contract.rs  generate_statistics.rs  generate_summaries.rs  generate_summaries_for_publication.rs  get_all.rs  get_by_id.rs  get_by_publication.rs  mod.rs  reject.rs  request.rs  search.rs
payment/application/donation/: charge.rs  donate.rs  donate_to_author.rs  get_by_id.rs  mod.rs  search.rs
payment/domain/: admin.rs  contract.rs  donation.rs  mod.rs  payment.rs  plan.rs  publication.rs  subscription.rs  user.rs
payment/mocks/: domain.rs  mod.rs  payment_service.rs
publishing/: Cargo.toml  container.rs  lib.rs
publishing/application/: dtos.rs  mod.rs
publishing/domain/: admin.rs  author.rs  category.rs  collection.rs  content_manager.rs  interaction.rs  mod.rs  publication.rs  reader.rs  statistics.rs  user.rs
publishing/mocks/: container.rs  domain.rs  inmem_container.rs  integration_container.rs  mod.rs  populate.rs  user_service.rs
(+678 files in other folders)
