[package]
name = "omics"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
