[package]
name = "catalogue"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../common" }
shared = { path = "../shared" }
publishing = { path = "../publishing" }

async-trait = "0.1.36"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
