[package]
name = "common"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
async-trait = "0.1.36"
chrono = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
