[package]
name = "common"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
async-trait = "0.1.36"
bcrypt = "0.8"
chrono = "0.4"
env_logger = "0.7.1"
jsonwebtoken = "7"
log = "0.4.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1.4"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
warp = "0.2"
