[package]
name = "common"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
async-trait = "0.1.36"
chrono = "0.4"
regex = "1"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
