[package]
name = "file"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../common" }

actix-multipart="0.2.0"
actix-web = "2.0"
async-trait = "0.1.36"
bytes = { version = "0.5", features = ["serde"] }
futures = "0.3.1"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
sanitize-filename = "0.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
