[package]
name = "identity"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../common" }
shared = { path = "../shared" }

async-trait = "0.1.36"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
