[package]
name = "main"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[[bin]]
name = "omics"
path = "main.rs"

[build-dependencies]
common = { path = "../common" }
identity = { path = "../identity" }
publishing = { path = "../publishing" }


[dependencies]
common = { path = "../common" }
identity = { path = "../identity" }
payment = { path = "../payment" }
publishing = { path = "../publishing" }

actix-cors = "*"
actix-http = "*"
actix-multipart="0.2.0"
actix-rt = "1.0"
actix-web = "2.0"
async-trait = "0.1.36"
env_logger = "0.7.1"
futures = "0.3.1"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
