[package]
name = "main"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[[bin]]
name = "omics"
path = "main.rs"

[build-dependencies]
common = { path = "../common" }
identity = { path = "../identity" }
publishing = { path = "../publishing" }


[dependencies]
common = { path = "../common" }
shared = { path = "../shared" }
file = { path = "../file" }
identity = { path = "../identity" }
payment = { path = "../payment" }
publishing = { path = "../publishing" }

actix-cors = "0.3"
actix-multipart="0.3"
actix-rt = "1.1"
actix-web = "3"
async-trait = "0.1.36"
bytes = { version = "0.5", features = ["serde"] }
chrono = "0.4"
env_logger = "0.7.1"
futures = "0.3.1"
log = "0.4.0"
sanitize-filename = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
