[package]
name = "notification"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../common" }
identity = { path = "../identity" }
shared = { path = "../shared" }

async-trait = "0.1.36"
lettre = "0.10.0-alpha.2"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
