[package]
name = "notification"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../common" }
identity = { path = "../identity" }
publishing = { path = "../publishing" }
shared = { path = "../shared" }

async-trait = "0.1.36"
chrono = "0.4"
lettre = "0.10.0-alpha.2"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
