[package]
name = "payment"
version = "0.1.0"
authors = ["Alan Boglioli <alan.boglioli@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../common" }

async-trait = "0.1.36"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
